Fix film strip on mobile device => fix various diaporama stuff

--- a/core/src/plugins/gui.ajax/res/themes/vision/css/ajaxplorer.css
+++ b/core/src/plugins/gui.ajax/res/themes/vision/css/ajaxplorer.css
@@ -3757,6 +3757,7 @@ textarea.editor
 div.icons_only.diaporama_toolbar{
     height: 33px !important;
     width: 470px;
+    max-width:80%;
 }
 div.diaporama_toolbar div#diaporama_legend{
     display: none;
